activate some traces for EHCI bus driver (see bug #4718)

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@41270 a95241bf-73f2-0310-859d-f6bbb57e9c96